# GraphTheory2022-2023

./: .editorconfig  .gitignore  1.py  1034.js  1080.js  1334.py  1361.cpp  1367.py  1368  1368.cpp  1373.cpp  1376.py  1462  1514.py  1609  1609.py  1654.cpp  1722.js  1976.js  1976.py  1996.py  1networkx.py  2.1.py  2.2.py  2039.cpp  2049.cpp  2096.py  2097.js  2146.js  2290.py  2385.cpp  2467.js  2596.py  385.py  388.py  655.py  854.py  Cargo.toml  Graph_theory.ipynb  Handler.h  (+82 more)
1.1. Basic properties/: 1.1.py
1.2/: 2.py  2a.py
1.3. Clustering coefficient/: 1.3.py
1.4. Degree assortativity coefficient/: 1.4.py
2.1. Static topological features/: 2.1.py
2.2/: 2.2.AB  2.2.py
Aminov/: 1261.py  2096.py  672.py  685.py
Borisova/: 1145.cpp  655.cpp
Fedorova/: 1042.py  1367.py  1530.py  1654.py  2203.py
Gromov/: 1368_hard.py  1462_med.py  1514_med.py  1609_med.py  655_med.py
Kamynin/: 1042.cpp  1267.cpp  1391.cpp  1530.cpp  2092.cpp
Koshelev/: 1145.cpp  1376.cpp  1377.cpp  1462.cpp  1514.cpp  1609.cpp  2146.cpp  655.cpp  854.cpp
Kuznetsov_Ilja/: 1034.py  1261.py  1376.py  1530.py  2003.py  2039.py  2127.py  2203.py  2467.py  2556.py
Kvasha/: 1203.js  1334.js  1361.js  1559.js  1932.js  1976.js  2101.js  2290.js  2467.js  756.js
Lahkov/: 1261.cpp  1368.cpp  1993.cpp  2049.cpp  934.cpp
Leetcode/: 1080.go  1261.go  1361. Validate Binary Tree Nodes  1368.go  1376.go  1391. Check if There is a Valid Path in a Grid  1462. Course Schedule IV  1530.go  1765.go  2101. Detonate the Maximum Bombs  2127. Maximum Employees to Be Invited to a Meeting  2127.go  655.go  685.go  756.go
Menkeev/: 1080. Insufficient Nodes in Root to Leaf Paths.cpp  1514. Path with Maximum Probability.cpp  (+7 more)
(+620 files in other folders)
