[tool.poetry]
name = "core2"
version = "0.1.0"
description = ""
authors = ["Kirill <Rudovichkirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
sklearn = "^0.0.post5"
pickle-mixin = "^1.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
